--- a/MagicSquare/src/main/res/layout/activity_main.xml
+++ b/MagicSquare/src/main/res/layout/activity_main.xml
@@ -1,34 +1,62 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:paddingLeft="@dimen/activity_horizontal_margin"
-              android:paddingRight="@dimen/activity_horizontal_margin"
-              android:paddingTop="@dimen/activity_vertical_margin"
-              android:paddingBottom="@dimen/activity_vertical_margin"
-              android:orientation="vertical"
-              tools:context=".MainActivity">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/background"
+    android:orientation="vertical"
+    android:padding="@dimen/spacing_common">
 
-    <GridView
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/spacing_common"
+        android:gravity="center"
+        android:text="@string/title"
+        android:textColor="@color/text"
+        android:textSize="30sp" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@color/grid_color"
+        android:gravity="center">
+
+        <GridView
             android:id="@+id/gridView"
-            android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:numColumns="3"
-            android:layout_weight="1"
-            android:layout_height="0dp"/>
-
-    <LinearLayout android:layout_height="wrap_content"
-                  android:layout_width="match_parent"
-                  android:orientation="horizontal">
-    <SeekBar
-            android:id="@+id/seekBar"
-            android:max="7"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom" />
+            android:numColumns="3" />
 
-    <TextView android:id="@+id/tvSize"
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/spacing_common"
+        android:gravity="center"
+        android:text="@string/subtitle"
+        android:textColor="@color/text"
+        android:textSize="18sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <SeekBar
+            android:id="@+id/seekBar"
+            android:layout_width="0dp"
+
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_weight="1"
+            android:max="7" />
+
+        <TextView
+            android:id="@+id/tvSize"
+            android:textColor="@color/text"
             android:layout_width="15dp"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
