--- a/MagicSquare/src/main/res/values/colors.xml
+++ b/MagicSquare/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="grid_color">#ffffffff</color>
+    <color name="text">#ffdddddd</color>
+    <color name="background">#ff607D8B</color>
+    <color name="grid_color">#ffdddddd</color>
 
 </resources>
